fix search button alignment

--- a/style.css
+++ b/style.css
@@ -60,10 +60,14 @@ nav{
     color: rgb(226, 226,226);
 }
 
-
+.search-area{
+    float: left;
+    clear: none; 
+    display: flex;
+}
 
 .search-area button {
-    float: left;
+    /* float: left; */
     padding: 3px 5px;
     margin-top: 3px;
     background: rgb(226, 226,226);
@@ -73,13 +77,12 @@ nav{
     cursor: pointer;
   }
 .search-text{
-    border-style: solid;
-    border-width: 1px;  
+    border-style: none;
     border-left-style: none;
     width: 30vh;
     border-radius: 0px 5px 5px 0px;
     font-size: 10px;
-    padding: 3px;
+    padding: 3px 5px;
     margin-top: 3px;
 }
 .search-area button:hover {
